syntax = "proto3";

package virtualclassroom.v1;

option go_package = "github.com/manabie-com/backend/pkg/manabuf/virtualclassroom/v1;vpb";

enum PollingState {
  POLLING_STATE_STARTED = 0;
  POLLING_STATE_STOPPED = 1;
  POLLING_STATE_ENDED = 2;
}

enum PlayerState {
  PLAYER_STATE_PAUSE = 0;
  PLAYER_STATE_PLAYING = 1;
  PLAYER_STATE_ENDED = 2;
}

enum MediaType {
  MEDIA_TYPE_NONE = 0;
  MEDIA_TYPE_VIDEO = 1;
  MEDIA_TYPE_IMAGE = 2;
  MEDIA_TYPE_PDF = 3;
  MEDIA_TYPE_AUDIO = 4;
  MEDIA_TYPE_RECORDING_VIDEO = 5;
}  

enum PrepareToPublishStatus {
  PREPARE_TO_PUBLISH_STATUS_NONE = 0;
  PREPARE_TO_PUBLISH_STATUS_REACHED_MAX_UPSTREAM_LIMIT = 1;
  PREPARE_TO_PUBLISH_STATUS_PREPARED_BEFORE = 2;
}

enum UnpublishStatus {
  UNPUBLISH_STATUS_UNPUBLISHED_NONE = 0;
  UNPUBLISH_STATUS_UNPUBLISHED_BEFORE = 1;
}

enum LessonTimeCompare {
  LESSON_TIME_COMPARE_FUTURE = 0;
  LESSON_TIME_COMPARE_FUTURE_AND_EQUAL = 1;
  LESSON_TIME_COMPARE_PAST = 2;
  LESSON_TIME_COMPARE_PAST_AND_EQUAL = 3;
}

enum TimeLookup {
  TIME_LOOKUP_START_TIME = 0;
  TIME_LOOKUP_END_TIME = 1;
  TIME_LOOKUP_END_TIME_INCLUDE_WITHOUT_END_AT = 2;
  TIME_LOOKUP_END_TIME_INCLUDE_WITH_END_AT = 3;
}

// lessons end_at field
enum LiveLessonStatus {
  LIVE_LESSON_STATUS_NONE = 0;
  LIVE_LESSON_STATUS_NOT_ENDED = 1;
  LIVE_LESSON_STATUS_ENDED = 2;
}

enum LiveLessonConversationType {
  LIVE_LESSON_CONVERSATION_TYPE_PUBLIC = 0;
  LIVE_LESSON_CONVERSATION_TYPE_PRIVATE = 1;
}